[package]
name = "emulator"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

canvas = { path = "../canvas"}
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.1"

[build]
target="stable-x86_64-apple-darwin"