[package]
name = "key-event"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = ["hal"] }
# spidev-sh1106 = { path = "../spidev-sh1106"}
# keymap = { path = "../keymap"}
sh1106 = "0.2.0"
num-traits = "0.2"
num-derive = "0.2"