[package]
name = "keytest"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = ["hal"] }