[package]
name = "main"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = {version= "0.2.2"}
random-pos = { path = "../random-pos"}
spidev-sh1106 = { path = "../spidev-sh1106"}
key-event = { path = "../key-event"}
keyenum = { path = "../keyenum"}
canvas = { path = "../canvas"}
rppal = { version = "0.11.3", features = ["hal"] }


[dependencies.sh1106]
version = "0.2.0"
features = ["graphics"]
# [dependencies.rppal]
# version = "0.11.3"
# features = ["hal"]

[dependencies.embedded-hal]
version = "0.2.3"

[dependencies.embedded-graphics]
version = "0.6.2"

