[package]
name = "oled"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.2.2"

[dependencies.sh1106]
version = "0.2.0"
features = ["graphics"]
graphics = ["embedded-graphics"]

[dependencies.rppal]
version = "0.11.3"
features = ["hal"]

[dependencies.embedded-hal]
version = "0.2.3"

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"
optional = true
